# master-thesis-final

./: .env-template  .gitignore  README.md  pyproject.toml
notebooks/: 1_embeddings_with_classifiers.ipynb  2_llm_classifiers.ipynb  3_llm_classifiers_rag.ipynb  5_2_llm_rf_data_labeling.ipynb  5_3_llm_rf.ipynb
notebooks/archive/: 5_1_llm_rf_alessandro_data.ipynb
src/classifiers/: __init__.py  classifier_cache.py  classifiers.py  fixed_recall_classifiers.py
src/embeddings/: __init__.py  embeddings.py  vector_db.py
src/llm/: __init__.py  criterias.py  llm_classifier.py  models_costs.json
src/utils/: utils.py
